# InterruptionResumeStudio

./: .gitignore  .prettierignore  CLAUDE.md  IMPLEMENTATION-ROADMAP.md  README.md  eslint.config.js  knip.json  overlay.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  overlay.json
src-tauri/src/: bindings.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: app_state_cmd.rs  export_cmd.rs  hotkey.rs  import_cmd.rs  log_cmd.rs  mod.rs  overlay.rs  preferences.rs  reports_cmd.rs  resume_cmd.rs  snapshot_cmd.rs
src-tauri/src/db/: mod.rs
src/components/: DayTimeline.tsx  EnergyPicker.tsx  ErrorBoundary.tsx  Insights.tsx  InterruptionLog.tsx  Onboarding.tsx  OverlayApp.tsx  ProjectFilter.tsx  ResumeCard.tsx  Settings.tsx  SnapshotForm.tsx  SnapshotHistory.tsx  ThemeProvider.tsx
src/components/ui/: dialog.tsx
src/hooks/: use-app-state.ts  use-log.ts  use-preferences.ts  use-reports.ts  use-resume.ts  use-snapshot.ts
src/lib/: bindings.ts  date.ts  result.ts  time.ts
src/store/: app-store.ts
src/test/: setup.ts  test-utils.tsx
src/types/: index.ts
